--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,8 @@ footer {
 #aboutMe {
     color: black;
     font-size: 18px;
-    padding: 10px 400px 0 0;
-    clear: both;
+    float:left;
+    width: 50%;
 
 }
 
