--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,8 @@ h3 {
 }
 #imageCollage {
     grid-column: 2;
+    float: right;
+    right-margin: 10px;
 }
 
 /* Align the table to the right */
@@ -157,7 +159,7 @@ a {
 #biography {
     color: black;
     font-size: 18px;
-    float:left;
+    float: left;
     width: 50%;
 }
 
@@ -165,8 +167,10 @@ a {
     float: right;
     width: 300px; /* Make the image take up half the screen width */
     height: auto; /* Maintain aspect ratio */
+    margin-right: 20px;
 }
 #tubingRiver {
+    float: right;
     width: 100px;
     height: auto;
 }
@@ -176,6 +180,7 @@ a {
 }
 
 #swimLesson {
-    width: 200px;
+    width: 300px;
     height: auto;
+    float: right;
 }
