font and background color

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,24 @@
 /* Reset & base styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
-    color: #333;
+    background-color: rgb(174, 234, 249);
+    color: #000;
 }
 
 header#titlePage {
-    background-color: #0077b6;
+    background-color: #aeeaf9;
     color: white;
     text-align: center;
     padding: 2rem;
+    position: sticky;
+    font-family: 'Garamond', serif;
+    
+}
+/* Apply Garamond to all headers */
+h2 {
+    font-family: 'Garamond', serif;
 }
 
 #slogan {
@@ -84,6 +91,7 @@ header#titlePage {
 
 #pricing-header {
     margin-top: 0;
+    font-family: 'Garamond', serif;
 }
 
 #container2 {
