--- a/styles.css
+++ b/styles.css
@@ -5,25 +5,29 @@ body {
     padding: 0;
     background-color: rgb(174, 234, 249);
     color: #000;
+    font-size: 18px;
 }
 
 header#titlePage {
     background-color: #aeeaf9;
-    color: white;
+    color: black;
     text-align: center;
     padding: 2rem;
     position: sticky;
     font-family: 'Garamond', serif;
+    font-size: 30px;
     
 }
 /* Apply Garamond to all headers */
 h2 {
     font-family: 'Garamond', serif;
+    font-size: 22px;
 }
 
 #slogan {
     font-style: italic;
     margin-top: 0.5rem;
+    font-size: 20px;
 }
 
 .container {
@@ -75,9 +79,9 @@ h2 {
 }
 
 #pricing table {
-    width: 100%;
+    width: 75%;
     border-collapse: collapse;
-    background-color: white;
+    background-color: rgb(208 218 225);
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
